# cpp-study

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md  main.cpp  readme.md
C++17/: StructuredBinding.cpp  explicit.cpp
C++Features/: .clang-format  C++17.md  CMakeLists.txt  Init_statement_for_if.cpp
C++Features/optional/: optional.cpp
C++Features/tuple/: tuple.cpp  tuple.md
EffectiveModernC++/: CMakeLists.txt
EffectiveModernC++/typeDeduction/: README.md  decayToPointer.cpp  typeDeduction.cpp
Features/: CMakeLists.txt
Features/any/: MyAny.hpp  main.cpp
Features/function/: main.cpp
Features/lambda/: main.cpp
Features/other/: if_constexpr.cpp
Features/variant/: variant.cpp
Note/: IO.md  exception.cpp  注意事项.md  缓冲区.md
Note/get和getline/: get和getline.md
Note/string/: string_code.cpp
STL/: Algorithm.md  CMakeLists.txt  STL.md  algorithm.cpp  numeric.md  specialIterator.cpp  函数对象.md  容器 函数对象.md  容器 迭代器.md
chrono/: C C++日期时间.md  CMakeLists.txt  README.md  main.cpp  readme.md  日期时间.md  计时.md
construct-functions/: main.cpp  readme.md
construct-functions/Initializer-list/: main.cpp
construct-functions/construct-function/: readme.md
construct-functions/static-member-function/: main.cpp  readme.md
construct-functions/初始化列表/: readme.md
construct-functions/构造函数/: main.cpp  readme.md
design-mode/单例模式/: main.cpp  main2.cpp  readme.md
designPatterns/: CMakeLists.txt  README.md  observer.cpp  test.cpp
designPatterns/CreationalDesignPatterns/: CMakeLists.txt  README.md
designPatterns/CreationalDesignPatterns/AbstractFactory/: AbstractFactory.cpp
designPatterns/CreationalDesignPatterns/Builder/: builder.cpp
designPatterns/CreationalDesignPatterns/FactoryMethod/: FactoryMethod.cpp
designPatterns/CreationalDesignPatterns/Prototype/: prototype.cpp
designPatterns/CreationalDesignPatterns/SimpleFactory/: SimpleFactory.cpp
designPatterns/CreationalDesignPatterns/Singleton/: Singleton1.cpp  Singleton2.cpp  Singleton2_multhread.cpp  main.cpp
designPatterns/PIMPL/: impl.cpp  impl.h  main.cpp
designPatterns/StructuralPatterns/Adapter/: adapter.cpp
exception/: main.cpp
function-overload/extern-C/: readme.md
function-overload/extern-C/dir1/: readme.md
function-overload/extern-C/dir2/: main.c  print.cpp
function-overload/混合编程/dir1/: main.cpp
functionOverload/函数换名/: main.c  readme.md
functionOverload/混合编程/dir1/: print.c  readme.md
functionOverload/混合编程/dir2/: readme.md
function_overload/extern-C/dir2/: readme.md
function_overload/function-rename/: readme.md
function_overload/operator-overload/: new.cpp
hackingcpp/: CMakeLists.txt  ascending_seqence.cpp  bstree.hpp  prefect_forwarding.cpp  uniform_distribution.cpp
hackingcpp/List/: main.cpp  mylist.hpp
hackingcpp/bstree/: main.cpp
idiom/: CMakeLists.txt  ctrp.cpp  shared_from_this.cpp
implicit/: .main.cpp.swo  .main.cpp.swp  main.cpp
inherit-polymorphism/inherit/: main.cpp  readme.md
inherit-polymorphism/polymorphism/: VirtualCopyConstructors.cpp  main.cpp  readme.md
member-function/: readme.md
move/: RVO.cpp  main.cpp  readme.md
operator-overload/: main.cpp  readme.md
precompiled header/: 预编译头.md
precompiled header/code/: Moss.cpp  Moss.h  main.cpp  pch.h
random/: CMakeLists.txt  main.cpp  random.cpp
reference/const-reference/: main.cpp
reference/函数返回值/: main.cpp
reference/常引用/: main.cpp  readme.md
reference/引用指针数组/: main.cpp  readme.md
smart_ptr/: main.cpp  readme.md
streanm/: main.cpp
template/: CMakeLists.txt  README.md  SFNAE.cpp  TypeDeduction.cpp  enable_if.cpp  perfect_forwarding.cpp  template_inherit.cpp  traits.cpp  traits_1.cpp
template/SFINAE/: main.cpp
template/VariadicTemplate/: CMakeLists.txt  function.cpp  templateInherit.cpp  templateInterface.cpp
template/typeDeduction/: explicit_TDguide.cpp
test/: CMakeLists.txt  main.cpp  test.hpp
thread/: CMakeLists.txt  main.cpp  parallel_accumulate.cpp  多线程.md  并发编程.md  异步.md  注意.md
thread/atomic/: main.cpp
thread/atomic_flag/: main.cpp
thread/condition_variable/: main.cpp
thread/parallel_accumulate/: parallel_accumulate.cpp
thread/rwlock/: main.cpp
thread/thread_para_transfer/: thread_para_transfer.cpp
thread/threadsafe_queue/: main.cpp  threadsafe_queue.hpp
type-cast/: main.cpp
utility/: CMakeLists.txt
utility/logger/: logger.cpp  logger.h  main.cpp
设计模式/单例模式/: readme.md
