cmake_minimum_required(VERSION 3.20)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(cplusplus-learning)


add_subdirectory(hackingcpp)
add_subdirectory(chrono)
add_subdirectory(Features)
add_subdirectory(random)
add_subdirectory(STL)
add_subdirectory(template)
add_subdirectory(thread)
