cmake_minimum_required(VERSION 3.20)

project(cplusplus-learning)

add_subdirectory(hackingcpp)
add_subdirectory(chrono)
add_subdirectory(Features)
add_subdirectory(random)
add_subdirectory(STL)
add_subdirectory(template)
add_subdirectory(thread)
add_subdirectory(designPatterns)
add_subdirectory(EffectiveModernC++)
add_subdirectory(utility)

add_subdirectory(test)
